src/test/compile-fail/alt-vec-mismatch-2.rs
fn main() {
    match () {
        [()] => { } //~ ERROR mismatched type: expected `()` but found vector
    }
}
